# swarmchain

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/: .env.example  Dockerfile  requirements.txt
docs/: ARENA.md  BEHAVIORAL_EVAL.md  CALIBRATION.md  DESIGN.md  DISCOVERY.md  DOCTRINE.md  FINDING_27B.md  FINDING_ENERGY.md  FLIGHTSHEET_EPOCH1.md  GENESIS.md  HIVE.md  LAYOUT.md  PRESSURE_TO_TRUTH.md  README.md  SPECTATORS.md  SWARMEVAL.md  SWARMOS.md  SWARMREFINERY.md  VALIDATION_PROTOCOL.md  architecture.md  deploy_runbook.md  walkthrough.md  whitepaper.md
fleet/: swarm_ctl.sh  swarm_fleet.sh
glass-wall/: architect.html  index.html  server.py
infra/: .env.example  deploy.sh  docker-compose.prod.yml  docker-compose.yml
models/: MODELS.md  download.sh
refinery/: __init__.py  classifier.py  judge.py  pipeline.py  recorder.py
refinery/domains/: ai.py  (+15 more)
simulator/: baseline_a.py  baseline_b.py  demo_100_nodes.py  export_training_data.py  launch_xeon_fleet.sh  mine_1000.py  real_worker.py  run_benchmark.py  simulator.py  strategies.py  verify_window.py  worker.py
swarmos/: __init__.py  algos.py  calibrate.py  cli.py  closing.py  config.py  epoch.py  estimator.py  flightsheet.py  flightsheet_html.py  models.py  notify.py  permit.py  poj.py  profiler.py  serve.py  state.py
templates/: base.html  build_proposal.html  closing.html  gate_monitor.sh  gate_report.html  preflight.html  send.sh  train_watchdog.sh
verification/: orchestrate_v2.py  orchestrate_v3.py  orchestrate_v4.py  orchestrate_v5.py  orchestrate_validation.py  verify_domain.py
(+47 files in other folders)
